# FeedWise

./: LICENSE  README.md
backend/: Makefile  README.md  init_database.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py
backend/app/controllers/: onboarding_controller.py
backend/app/db/repository/: account_repository.py  following_recommendations_repository.py  posts_seen_repository.py
backend/app/models/: __init__.py  account.py  account_model.py  following_recommendations.py  following_recommendations_model.py  posts_seen.py  posts_seen_model.py  user.py  user_config.py
backend/app/routes/: __init__.py  onboarding_routes.py
backend/app/services/: account_service.py  following_recommendations_service.py  onboarding_service.py  posts_seen_service.py  user_service.py
backend/app/types/: enums.py
backend/app/utils/: errors.py
poc/: .env.example  requirements.txt  script.py
